Fix wrong position

--- a/css/aligin.css
+++ b/css/aligin.css
@@ -1,5 +1,5 @@
 .centerY{
-  left: 50%;
+  top: 50%;
    transform: translateY(-50%);
    -webkit-transform: translateY(-50%);
    -o-transform: translateY(-50%);
